--- a/index.html
+++ b/index.html
@@ -52,11 +52,23 @@
         .carousel {
             max-width: 500px;
             margin: 0 auto;
-            border: 1px solid black; 
+            border: 1px solid black;
         }
 
         .carousel-item img {
             border: 1px solid black;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            text-align: center;
+        }
+
+        footer img {
+            width: 30px;
+            margin: 0 10px;
         }
     </style>
 
@@ -71,14 +83,21 @@
     <header>
         <h1>Lanchonete</h1>
     </header>
+
     <nav>
         <a href="#home">Sobre</a>
         <a href="#sobre">Cardápio</a>
-        <a href="#contato">Contato</a>
+        <a href="#ofertas">Ofertas</a>
     </nav>
+
     <section id="home">
-        <h2>Sobre</h2>
-        <p>Aqui você encontrará informações interessantes.</p>
+
+        <h1>Sobre</h1>
+
+        <p> Nossa essência está em criar um ambiente acolhedor e convidativo, onde amigos e familiares possam se
+            reunir para momentos especiais. Somos uma lanchonete que valoriza a união e o conforto, proporcionando
+            um espaço perfeito para todas as idades.</p>
+
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -123,10 +142,31 @@
             </button>
         </div>
 
+        <pr>
+            <a href="https://www.google.com/maps/dir/-26.2323118,-51.0854015/Lanchonete+do+Carlinhos/@-26.2187576,-51.1021038,14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x94e661931a2112b9:0xab139a6595aa12f4!2m2!1d-51.0880879!2d-26.204368?entry=ttu" target="_blank">
+                Onde nos encontrar!!!
+            </a>
+        </pr>
+
     </section>
+
+    <hr>
+
     <section id="sobre">
-        <h2>Cardápio</h2>
-        <p>Lanches.</p>
+
+        <h1> Cardápio </h1>
+
+
+        <ol> X-SALADA () R$15,00 </ol>
+        <ol> X-BURGUER () R$13,00 </ol>
+        <ol> X-BACON () R$18,00 </ol>
+        <ol> X-EGG () R$18,00 </ol>
+        <ol> X-CALABRESA () R$18,00 </ol>
+        <ol> X-FRANGO () R$18,00 </ol>
+        <ol> X-TUDO () R$28,00 </ol>
+        <ol> BAURU () R$8,00 </ol>
+        <ol> MISTO QUENTE () R$7,00 </ol>
+
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -138,10 +178,10 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="lanche.jpg" class="d-block w-100" alt="...">
+                    <img src="carda.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="porção.jpg" class="d-block w-100" alt="...">
+                    <img src="carda2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="porções2.jpg" class="d-block w-100" alt="...">
@@ -161,11 +201,45 @@
 
     </section>
 
-    <section id="contato">
-        <h2>Contato</h2>
-        <p>Entre em contato comigo.</p>
-        <img src="imagem3.jpg" alt="Imagem 3">
+    <hr>
+
+    <section id="ofertas">
+        <h2>Ofertas!!!</h2>
+        <p>CONFIRA:</p>
+
+        <div id="carouselOfertas" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="saladaOFERTA.jpg" class="d-block w-100" alt="Oferta 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="pastelOFERTA.jpg" class="d-block w-100" alt="Oferta 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="porções2.jpg" class="d-block w-100" alt="Oferta 3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselOfertas" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselOfertas" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Próximo</span>
+            </button>
+        </div>
     </section>
+
+
+    <footer>
+        <p>Siga-nos nas redes sociais</p>
+        <a href="https://www.facebook.com/people/Sob-Nova-Dire%C3%A7%C3%A3o/pfbid02M2GBfK7vfV8Gdrzxjc4upYYmgoEokvLahzSq4BaD5KHa844FC2Grk2sdVMYzcs1Bl/?ref=xav_ig_profile_web"
+            target="_blank"><img src="face.png" alt="Facebook"></a>
+        <a href="https://www.instagram.com/lanchonetedocarlinhos_/" target="_blank"><img src="insta.png"
+                alt="Instagram"></a>
+        <a href="https://www.whatsapp.com" target="_blank"><img src="zap.png" alt="WhatsApp"></a>
+        <p> Contato: (42) 99865-4011 </p>
+    </footer>
 
 </body>
 
